syntax = "proto3";
option csharp_namespace = "MySpace.WebAPI.Services";
import "models/files_model.proto";
package my_space;

service Files {

	rpc Create(NewFile) returns(FileData);
	rpc Edit(EditFileData) returns(FileData);
	rpc Delete(DeleteFileDataRequest) returns(DeleteFileData);
	
	rpc GetById(FileDataRequest) returns(FileData);
	rpc ListFiles(ListFileDataRequest) returns(ListFilesData);
	
}